--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -89,22 +89,22 @@
                 </figure>
 
                 <figure>
+                    <a href="amstel.html#koetsier"><img src="../assets/fmdci_amfi_koetsier-montaignehuis.jpg" alt="Koetsier-Montaignehuis"></a>
+                    <figcaption></figcaption>
+                </figure>
+
+                <figure>
+                    <a href="amstel.html#studiohva"><img src="../assets/studio-hva.jpg" alt="studio-hva"></a>
+                    <figcaption></figcaption>
+                </figure>
+
+                <figure>
                     <a href="amstel.html#kohnstamm-bieb"><img src="../assets/hva0010623.jpg" alt="Bibliotheek Kohnstammhuis"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="amstel.html#koetsier-bieb"><img src="../assets/amfi.jpg" alt="Koetsier-Montaignehuis"></a>
-                    <figcaption></figcaption>
-                </figure>
-
-                <figure>
-                    <a href="amstel.html#wibaut-bieb"><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="Bibliotheek Wibauthuis"></a>
-                    <figcaption></figcaption>
-                </figure>
-
-                <figure>
-                    <a href="amstel.html#wibaut-bieb"><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="Bibliotheek Wibauthuis"></a>
+                    <a href="amstel.html#eten/drinken"><img src="../assets/eten.jpg" alt="koffiecorners"></a>
                     <figcaption></figcaption>
                 </figure>
             </div>
@@ -167,7 +167,7 @@
                 </figure>
 
                 <figure>
-                    <a href="https://fatimahilali.github.io/visitekaartje/">
+                    <a href="https://fatimahilali.github.io/visitekaartje/"target="_blank">
                         <img src="../assets/Squad1G-Fatima-H.JPG" alt="Fatima El Hilali"></a>
                     <figcaption></figcaption>
                 </figure>
@@ -185,109 +185,109 @@
                 </figure>
 
                 <figure>
-                    <a href="https://irisvw.github.io/your-tribe-profile-card/">
+                    <a href="https://irisvw.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Iris.JPG" alt="Iris"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://hubregtsejoost.github.io/your-tribe-profile-card/"><img
+                    <a href="https://hubregtsejoost.github.io/your-tribe-profile-card/" target="_blank"><img
                             src="../assets/Squad1G-Joost.JPG" alt="Joost"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://noxinput.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Jordy.JPG"
+                    <a href="https://noxinput.github.io/your-tribe-profile-card/" target="_blank"><img src="../assets/Squad1G-Jordy.JPG"
                             alt="Jordy"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://julesbruins.github.io/your-tribe-profile-card/"><img
+                    <a href="https://julesbruins.github.io/your-tribe-profile-card/" target="_blank"><img
                             src="../assets/Squad1G-Jules.JPG" alt="Jules"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://julia-stevens.github.io/your-tribe-profile-card/"><img
+                    <a href="https://julia-stevens.github.io/your-tribe-profile-card/" target="_blank"><img
                             src="../assets/Squad1G-Julia.JPG" alt="Julia"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://karima002.github.io/visitekaartje-karima/"><img src="../assets/Squad1G-Karima.JPG"
+                    <a href="https://karima002.github.io/visitekaartje-karima/" target="_blank"><img src="../assets/Squad1G-Karima.JPG"
                             alt="Karima"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://kimnikitaschijf.github.io/your-tribe-profile-card/"><img
+                    <a href="https://kimnikitaschijf.github.io/your-tribe-profile-card/" target="_blank"><img
                             src="../assets/Squad1G-Kim.JPG" alt="Kim Nikita"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://debosos.github.io/your-tribe-profile-card/">
+                    <a href="https://debosos.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Luc.JPG" alt="Luc"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://marsgotbars.github.io/your-tribe-profile-card-HvA/"><img
+                    <a href="https://marsgotbars.github.io/your-tribe-profile-card-HvA/" target="_blank"><img
                             src="../assets/Squad1G-Marcin.JPG" alt="Marcin"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://matthijs217.github.io/your-tribe-profile-card/"><img
+                    <a href="https://matthijs217.github.io/your-tribe-profile-card/" target="_blank"><img
                             src="../assets/Squad1G-Matthijs.JPG" alt="Matthijs"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://nadiachaja.github.io/your-tribe-profile-card/"><img
+                    <a href="https://nadiachaja.github.io/your-tribe-profile-card/" target="_blank"><img
                             src="../assets/Squad1G-Nadia.JPG" alt="Nadia"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://nmiaa.github.io/your-tribe-profile-card/">
+                    <a href="https://nmiaa.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Nas.JPG" alt="Nas"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://ofrqq.github.io/your-tribe-profile-card/">
+                    <a href="https://ofrqq.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Ole.JPG" alt="Ole"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://ravirkt.github.io/visitekaartje/">
+                    <a href="https://ravirkt.github.io/visitekaartje/" target="_blank">
                         <img src="../assets/Squad1G-Ravi.JPG" alt="Ravi"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://robbyrisse.github.io/your-tribe-profile-card/">
+                    <a href="https://robbyrisse.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Robby.JPG" alt="Robby"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://robinwouterson.github.io/your-tribe-profile-card/">
+                    <a href="https://robinwouterson.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Robin.JPG" alt="Robin"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://ties7.github.io/your-tribe-profile-card/">
+                    <a href="https://ties7.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Ties.JPG" alt="Ties"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="https://vsheo.github.io/your-tribe-profile-card/">
+                    <a href="https://vsheo.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="../assets/Squad1G-Viresh.JPG" alt="Viresh"></a>
                     <figcaption></figcaption>
                 </figure>
