--- a/amstel.html
+++ b/amstel.html
@@ -40,7 +40,7 @@
 
 
       <div class="info">
-        <img class="plaatje" src="../assets/Powerhouse-Company-Jakoba-Mulderhuis-Photography-by-Sebastian-van-Damme-05-scaled.jpg"
+        <img class="plaatje" src="assets/Powerhouse-Company-Jakoba-Mulderhuis-Photography-by-Sebastian-van-Damme-05-scaled.jpg"
           alt="Jakoba Mulderhuis">
 
         <table>
@@ -83,7 +83,7 @@
 
 
       <div class="info">
-        <img class="plaatje" src="../assets/benno-premselahuis-bph.jpg" alt="Benno Premselahuis">
+        <img class="plaatje" src="assets/benno-premselahuis-bph.jpg" alt="Benno Premselahuis">
 
         <table>
           <tr>
@@ -115,7 +115,7 @@
 
 
       <div class="info">
-        <img src="../assets/voortgang-aug.2014_738.jpg" alt="Muller-Lulofshuis">
+        <img src="assets/voortgang-aug.2014_738.jpg" alt="Muller-Lulofshuis">
 
         <table>
           <tr>
@@ -153,7 +153,7 @@
 
 
       <div class="info">
-        <img src="../assets/theo-thijssenhuis.jpg" alt="theo-thijssenhuis">
+        <img src="assets/theo-thijssenhuis.jpg" alt="theo-thijssenhuis">
 
         <table>
           <tr>
@@ -187,7 +187,7 @@
 
 
       <div class="info">
-        <img src="../assets/voortgang-aug.2014_732.jpg" alt="Wibauthuis">
+        <img src="assets/voortgang-aug.2014_732.jpg" alt="Wibauthuis">
 
         <table>
           <tr>
@@ -227,7 +227,7 @@
 
 
       <div class="info">
-        <img src="../assets/kohnstammhuis.jpg" alt="kohnstammhuis">
+        <img src="assets/kohnstammhuis.jpg" alt="kohnstammhuis">
 
         <table>
           <tr>
@@ -263,7 +263,7 @@
 
 
       <div class="info">
-        <img class="plaatje" src="../assets/fmdci_amfi_koetsier-montaignehuis.jpg" alt="Koetsier-Montaignehuis">
+        <img class="plaatje" src="assets/fmdci_amfi_koetsier-montaignehuis.jpg" alt="Koetsier-Montaignehuis">
 
         <table>
           <tr>
@@ -293,7 +293,7 @@
 
 
       <div class="info">
-        <img src="../assets/studio-hva.jpg" alt="Studio HVA">
+        <img src="assets/studio-hva.jpg" alt="Studio HVA">
 
         <table>
           <tr>
@@ -336,7 +336,7 @@
     <section id="kohnstamm-bieb">
       <h3>Kohnstammhuis </h3>
 
-      <img src="../assets/hva0010623.jpg" alt="bibliotheek kohnstammhuis">
+      <img src="assets/hva0010623.jpg" alt="bibliotheek kohnstammhuis">
 
       <p>Er is een groot aanbod op verschillende soorten boeken. <br />
         367 studieplekken en 20 studieplekken met pc in de stilteruimte. <br />
@@ -352,7 +352,7 @@
     <section id="wibaut-bieb">
       <h3>Wibauthuis</h3>
 
-      <img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="bibliotheek Wibauthuis">
+      <img src="assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="bibliotheek Wibauthuis">
 
       <p>500 studieplekken en
         3 studieplekken met pc. <br />
@@ -368,7 +368,7 @@
     <section id="koetsier-bieb">
       <h3>Koetsier-Montaignehuis</h3>
 
-      <img src="../assets/amfi.jpg" alt="bibliotheek Koetsier-Montaignehuis">
+      <img src="assets/amfi.jpg" alt="bibliotheek Koetsier-Montaignehuis">
 
       <p>90 studieplekken en 1 studieplek met pc.
         <br />
@@ -438,7 +438,7 @@
 
 
 <div class="koffie">
-      <img class="plaatje" src="../assets/eten.jpg" alt="koffiecorner">
+      <img class="plaatje" src="assets/eten.jpg" alt="koffiecorner">
 
       <p class="descripton">Bij de koffiecorners worden diverse soorten koffie, thee en koude dranken geserveerd. Ook voor
         broodjes of zoete lekkernijen kun je hier terecht.</p>
