Added figcaptions to images

--- a/index.html
+++ b/index.html
@@ -60,55 +60,55 @@
                 <div class="filler2 bottom"></div>
                 <figure>
                     <a href="amstel.html#jakoba"><img src="assets/jakoba.jpg" alt="Jakoba Mulder"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Jakoba</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#theo"><img src="assets/theo.jpg" alt="Theo Thijssen"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Theo</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#kohnstamm"><img src="assets/kohnstamm.jpg" alt="Philip kohnstamm"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Philip</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#wibaut"><img src="assets/wibaut.jpg" alt="Floor Wibaut"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Floor</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#benno-premsela"><img src="assets/benno-premsela.jpg" alt="Benno Premsela"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Benno</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#muller-lulofs"><img src="assets/Marie_Muller_Lulofs1.jpg"
                             alt="Marie Muller-Lulofs"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Marie</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#koetsier"><img src="assets/fmdci_amfi_koetsier-montaignehuis.jpg"
                             alt="Koetsier-Montaignehuis"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Koetsier & Charles</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#studiohva"><img src="assets/studio-hva.jpg" alt="studio-hva"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Studio HVA</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#kohnstamm-bieb"><img src="assets/hva0010623.jpg"
                             alt="Bibliotheek Kohnstammhuis"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Bibliotheken</figcaption>
                 </figure>
 
                 <figure>
                     <a href="amstel.html#eten/drinken"><img src="assets/eten.jpg" alt="koffiecorners"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Koffiecorners</figcaption>
                 </figure>
             </div>
             </section>
@@ -118,181 +118,181 @@
                 <figure>
                     <a href="https://ambersr.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Amber.JPG" alt="Amber"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Amber</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://nyathene.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Athene.JPG" alt="Athene"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Athene</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://brancovanbeek.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Branco.JPG" alt="Branco"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Branco</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://cedrikstephen.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Cedrik.JPG" alt="Cedrik"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Cedrik</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://osaoni.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Christian.JPG" alt="Christian"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Christian</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://clarice-cod.github.io/visitekaartje-clarice/" target="_blank">
                         <img src="assets/Squad1G-Clarice.JPG" alt="Clarice"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Clarice</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://colindegroot.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Colin.JPG" alt="Colin"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Colin</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://divaninl.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Dylan.JPG" alt="Dylan"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Dylan</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://fatimazelay.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Fatima-A.JPG" alt="Fatima El Ayadi"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Fatima A</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://fatimahilali.github.io/visitekaartje/" target="_blank">
                         <img src="assets/Squad1G-Fatima-H.JPG" alt="Fatima El Hilali"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Fatima H</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://halima98.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Halima.JPG" alt="Halima"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Halima</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://haroub-s.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Haroub.JPG" alt="Haroub"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Haroub</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://irisvw.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Iris.JPG" alt="Iris"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Iris</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://hubregtsejoost.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Joost.JPG" alt="Joost"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Joost</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://noxinput.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Jordy.JPG" alt="Jordy"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Jordy</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://julesbruins.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Jules.JPG" alt="Jules"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Jules</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://julia-stevens.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Julia.JPG" alt="Julia"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Julia</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://karima002.github.io/visitekaartje-karima/" target="_blank">
                         <img src="assets/Squad1G-Karima.JPG" alt="Karima"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Karima</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://kimnikitaschijf.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Kim.JPG" alt="Kim Nikita"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Kim</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://debosos.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Luc.JPG" alt="Luc"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Luc</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://marsgotbars.github.io/your-tribe-profile-card-HvA/" target="_blank">
                         <img src="assets/Squad1G-Marcin.JPG" alt="Marcin"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Marcin</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://matthijs217.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Matthijs.JPG" alt="Matthijs"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Matthijs</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://nadiachaja.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Nadia.JPG" alt="Nadia"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Nadia</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://nmiaa.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Nas.JPG" alt="Nas"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Nas</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://ofrqq.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Ole.JPG" alt="Ole"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Ole</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://ravirkt.github.io/visitekaartje/" target="_blank">
                         <img src="assets/Squad1G-Ravi.JPG" alt="Ravi"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Ravi</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://robbyrisse.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Robby.JPG" alt="Robby"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Robby</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://robinwouterson.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Robin.JPG" alt="Robin"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Robin</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://ties7.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Ties.JPG" alt="Ties"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Ties</figcaption>
                 </figure>
 
                 <figure>
                     <a href="https://vsheo.github.io/your-tribe-profile-card/" target="_blank">
                         <img src="assets/Squad1G-Viresh.JPG" alt="Viresh"></a>
-                    <figcaption></figcaption>
+                    <figcaption>Viresh</figcaption>
                 </figure>
             </div>
         </div>
